Added project list on /

--- a/pldm/templates/base.html
+++ b/pldm/templates/base.html
@@ -11,7 +11,8 @@
         <div class="actions">
             <a href="/create/">New</a>
         </div>
-    </header><div id="page">
+    </header>
+    <div id="page">
     {% block body %}
     {% endblock %}
     </div>
