--- a/pldm/static/pldm.css
+++ b/pldm/static/pldm.css
@@ -1,196 +1,118 @@
-body{
+body {
+  margin: 0px;
+  padding: 0px; }
+
+body, textarea, input, .pldm-editor.ace_editor {
+  font-family: "Monaco", monospace;
+  line-height: 21px;
+  font-size: 14px; }
+
+form {
+  margin: 0px;
+  padding: 0px; }
+
+header {
+  background-color: #222628;
+  color: #fff;
+  padding: 20px; }
+  header .actions {
+    float: right; }
+    header .actions a {
+      color: #fff; }
+
+a {
+  color: #1099ee;
+  text-decoration: none; }
+  a:hover {
+    text-decoration: underline; }
+
+#page {
+  padding-left: 20px;
+  position: relative;
+  margin: 0px; }
+
+aside {
+  position: absolute;
+  right: 0px;
+  top: 0px;
+  width: 30em;
+  background-color: #eee;
+  padding: 0px 20px;
+  height: 100%; }
+
+.pldm-autocomplete {
+  background-color: #eeffff;
+  position: absolute;
+  display: none;
+  z-index: 10000;
+  box-shadow: 9px 7px 20px #dddddd, -9px 7px 20px #dddddd;
+  max-width: 300px;
+  min-width: 100px; }
+  .pldm-autocomplete > ul {
+    margin: 0px;
+    padding: 0px; }
+    .pldm-autocomplete > ul > li {
+      padding: 1px 3px;
+      list-style: none;
+      white-space: pre;
+      text-overflow: ellipsis;
+      overflow: hidden;
+      border-top: 1px solid transparent;
+      border-bottom: 1px solid transparent; }
+      .pldm-autocomplete > ul > li:hover {
+        background-color: #cceeff; }
+      .pldm-autocomplete > ul > li.selected {
+        background-color: #cceeff;
+        border-color: #a3becc; }
+
+aside a {
+  display: block;
+  padding: 10px 20px 10px 20px;
+  margin-left: -20px;
+  margin-right: -20px; }
+  aside a:hover {
+    background-color: #fff; }
+
+h1 {
+  margin: 0px;
+  padding-top: 1em;
+  padding-bottom: 1em;
+  font-size: 150%;
+  margin-right: 30em;
+  line-height: 30px; }
+
+.document-display {
+  margin-right: 30em; }
+  .document-display > .headers b {
+    font-weight: normal; }
+  .document-display > .headers > .extra {
+    color: #999; }
+
+.document {
+  float: left;
+  margin-top: 21px; }
+  .document p {
     margin: 0px;
     padding: 0px;
-}
+    padding-bottom: 21px; }
 
-body, textarea, input, .pldm-editor.ace_editor{
-    font-family: "Monaco", monospace;
-    line-height: 21px;
-    font-size: 14px;
-}
-
-form{
-    margin: 0px;
-    padding: 0px;
-}
-
-header{
-    background-color: #222628;
-    color: #fff;
-    padding: 20px;
-}
-
-header .actions{
-    float: right;
-}
-
-header .actions a{
-    color: #fff;
-}
-
-textarea {
-    padding: 0px;
-    border: none;
-    white-space: pre;
-}
-
-#page{
-    padding-left: 20px;
-    position: relative;
-    margin: 0px;
-}
-
-aside{
-    position: absolute;
-    right: 0px;
-    top: 0px;
-    width: 30em;
-    background-color: #eee;
-    padding: 0px 20px;
-    height: 100%;
-}
-
-aside a{
-    display: block;
-    padding: 10px 20px 10px 20px;
-    margin-left: -20px;
-    margin-right: -20px;
-}
-
-aside a:hover{
-    background-color: #fff;
-}
-
-a{
-    color: #1099ee;
-    text-decoration: none;
-}
-a:hover{
-    text-decoration: underline;
-}
-
-h1{
-    margin: 0px;
-    padding-top: 1em;
-    padding-bottom: 1em;
-    font-size: 150%;
-    margin-right: 30em;
-    line-height: 30px;
-}
-
-.headers, .document{
-    font-size: 14px;
-    margin: 0px;
-    padding: 0px;
-}
-
-.document-display{
-    margin-right: 30em;
-}
-
-.document{
-    float: left;
-    margin-top: 21px;
-}
-
-.document p{
-    margin: 0px;
-    padding: 0px;
-    padding-bottom: 21px;
-}
-
-.document-display .headers b{
-    font-weight: normal;
-}
-.document-display .headers > .extra{
-    color: #999;
-}
-
-.history{
-    clear: both;
-}
-
-.crumbs{
-    padding-top: 1em;
-}
-
-.crumbs a{
+.crumbs {
+  padding-top: 1em; }
+  .crumbs a {
     display: inline-block;
     max-width: 150px;
     text-overflow: ellipsis;
     white-space: nowrap;
-    overflow: hidden;
-}
+    overflow: hidden; }
 
-textarea.ticket {
-    width: 800px;
-    height: 400px;
-}
+form.search input[type=text] {
+  width: 600px;
+  padding: 6px;
+  outline: none;
+  border: none;
+  background-color: #effedd; }
+  form.search input[type=text]:focus {
+    background-color: #cceeff; }
 
-textarea.ticket:focus{
-    outline: none;
-    border: none;
-    background-color: #cceeff;
-}
-
-input[type=submit]{
-    border: none;
-    background-color: transparent;
-    font-size: 100%;
-    color: #1099ee;
-    padding: 0px;
-    display: inline;
-}
-
-input[type=submit]:hover{
-    text-decoration: underline;
-}
-
-form.search input[type=text]{
-    width: 600px;
-    padding: 6px;
-    outline: none;
-    border: none;
-    background-color: #effedd;
-}
-
-form.search input[type=text]:focus{
-    background-color: #cceeff;
-}
-
-.deadref{
-    color: #ff6600;
-}
-
-.ref-dropdown{
-    background-color: #effedd;
-    position: absolute;
-    display: none;
-    z-index: 10000;
-    box-shadow: 0px 2px 2px #ccc;
-    max-width: 300px;
-}
-
-.ref-dropdown ul{
-    margin: 0px;
-    padding: 0px;
-}
-
-.ref-dropdown li{
-    padding: 3px;
-    list-style: none;
-    white-space: pre;
-    text-overflow: ellipsis;
-    overflow: hidden;
-    border-top: 1px solid transparent;
-    border-bottom: 1px solid transparent;
-}
-
-.ref-dropdown li:hover{
-    background-color: #cceeff;
-}
-
-.ref-dropdown li.selected{
-    background-color: #cceeff;
-    border-color: #fff;
-}
+.deadref {
+  color: #ff6600; }
