--- a/pldm/templates/base.html
+++ b/pldm/templates/base.html
@@ -9,7 +9,8 @@
     <header>
         <a href="/">Promise Less | Do More</a>
         <div class="actions">
-            <a href="/create/">New</a>
+            <a href="/search/">Search</a>
+            <a href="/new/">New</a>
         </div>
     </header>
     <div id="page">
