--- a/pldm/templates/index.html
+++ b/pldm/templates/index.html
@@ -9,8 +9,24 @@
     {% endfor %}
 </ul>
 
-<aside>
-    <a href="/list/">List documents</a>
-    <a href="/create/">Create document</a>
-</aside>
+<div id="viewport"></div>
+
+{% endblock %}
+
+
+{% block javascript %}
+    {{ super() }}
+    <script type="text/javascript">
+        var app = new pldm.Application({
+            element: '#viewport',
+            pages: {
+                '/': new pldm.IndexPage(),
+                '/search/': new pldm.ListPage(),
+                '/new/': new pldm.EditorPage(),
+                '/edit/:uid/': new pldm.EditorPage(),
+                '/view/:uid/': new pldm.ViewerPage()
+            }
+        });
+        app.start();
+    </script>
 {% endblock %}
