--- a/pldm/static/pldm.css
+++ b/pldm/static/pldm.css
@@ -1,6 +1,7 @@
-body {
+html, body {
   margin: 0px;
-  padding: 0px; }
+  padding: 0px;
+  height: 100%; }
 
 body, textarea, input {
   font-family: "Monaco", monospace;
@@ -72,7 +73,8 @@ a {
 
 #viewport {
   border-top: 3px solid #990000;
-  position: relative; }
+  position: relative;
+  background-color: #ffffff; }
 
 .pldm-sidebar {
   position: absolute;
@@ -120,13 +122,13 @@ h1 {
     white-space: nowrap;
     overflow: hidden; }
 
-form.search input[type=text] {
+.pldm-searchform input[type=text] {
   width: 600px;
   padding: 6px;
   outline: none;
   border: none;
   background-color: #effedd; }
-  form.search input[type=text]:focus {
+  .pldm-searchform input[type=text]:focus {
     background-color: #cceeff; }
 
 .deadref {
@@ -135,3 +137,6 @@ form.search input[type=text] {
 .pldm-list > ul > li {
   list-style: none;
   padding: 2px 0px; }
+
+.loading {
+  opacity: 0.5; }
