--- a/pldm/static/pldm.css
+++ b/pldm/static/pldm.css
@@ -12,7 +12,7 @@ form {
   margin: 0px;
   padding: 0px; }
 
-ul, li, div, form {
+ul, li, div, form, input[type=text] {
   margin: 0px;
   padding: 0px; }
 
@@ -72,7 +72,6 @@ a {
     font-size: 14px; }
 
 #viewport {
-  border-top: 3px solid #990000;
   position: relative;
   background-color: #ffffff; }
 
