--- a/pldm/templates/base.html
+++ b/pldm/templates/base.html
@@ -2,12 +2,13 @@
 <html>
 <head>
     <title>{% block html_title %}{% endblock %}</title>
+    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Droid+Sans+Mono" />
+    <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.1.1/css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="/static/pldm.css" />
-    <!--<link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" />-->
 </head>
 <body>
     <header>
-        <a href="/">Promise Less | Do More</a>
+        <a href="/">promise less <b>|</b> do more</a>
         <div class="actions">
             <a href="/search/">Search</a>
             <a href="/new/">New</a>
