--- a/pldm/static/css/config.scss
+++ b/pldm/static/css/config.scss
@@ -5,9 +5,9 @@ $dropdown-background-color: #eeffff;
 $link-color: #1099ee;
 
 @mixin font{
-    font-family: "Monaco", monospace;
+    font-family: "Droid Sans Mono", monospace;
     line-height: 21px;
-    font-size: 14px;
+    font-size: 16px;
 }
 
 @mixin boxdisplay{
