Improved list layout

--- a/pldm/static/css/config.scss
+++ b/pldm/static/css/config.scss
@@ -4,6 +4,8 @@ $dropdown-background-color: #eeffff;
 
 $link-color: #1099ee;
 
+$sidebar-width: 300px;
+
 @mixin font{
     font-family: "Droid Sans Mono", monospace;
     line-height: 21px;
