--- a/pldm/static/pldm.css
+++ b/pldm/static/pldm.css
@@ -19,6 +19,9 @@ ul, li, div, form, input[type=text], h1, h2, h3, h4, h5, h6 {
   margin: 0px;
   padding: 0px; }
 
+b {
+  font-weight: normal; }
+
 body > header {
   background-color: #fff;
   color: #fff;
@@ -126,12 +129,14 @@ a {
   background-color: #ffffff;
   padding-top: 20px;
   height: 100%; }
+  #viewport > .pldm-component {
+    margin-right: 320px; }
 
 .pldm-sidebar {
   position: absolute;
   right: 0px;
   top: 0px;
-  width: 30em;
+  width: 300px;
   height: 100%;
   padding: 10px 10px;
   border-left: 1px solid #eee; }
@@ -144,7 +149,6 @@ h1 {
   margin: 0px;
   padding-bottom: 1em;
   font-size: 26px;
-  margin-right: 30em;
   line-height: 30px;
   font-weight: normal; }
 
@@ -205,6 +209,9 @@ h1 {
     text-align: right; }
     .pldm-list > ul > li > b:after {
       content: ':'; }
+  .pldm-list > ul > li .type {
+    float: right;
+    color: #999; }
 
 .loading {
   opacity: 0.5; }
