--- a/pldm/static/css/pldm.scss
+++ b/pldm/static/css/pldm.scss
@@ -117,6 +117,18 @@ h1{
             color: #999;
         }
     }
+    
+    ul{
+        padding-left: 20px;
+    }
+    li, li li{
+        list-style: disc;
+    }
+    
+    h2{
+        font-size: 24px;
+        line-height: 42px;
+    }
 }
 
 .document{
@@ -191,10 +203,6 @@ h1{
                 width: 60px;
                 display: inline-block;
                 text-align: right;
-            
-                &:after{
-                    content: ':';
-                }
             }
             
             .type{
@@ -203,6 +211,10 @@ h1{
             }
         }
     }
+}
+
+.pldm-picker > .pldm-list{
+    margin-top: 10px;
 }
 
 .loading{
