--- a/pldm/static/css/config.scss
+++ b/pldm/static/css/config.scss
@@ -1,6 +1,6 @@
-$dropdown-shadow-color: #ddd;
+$dropdown-shadow-color: #fff;
 $dropdown-selection-color: #cceeff;
-$dropdown-background-color: #eeffff;
+$dropdown-background-color: #ffffff;
 
 $link-color: #1099ee;
 
