--- a/pldm/templates/base.html
+++ b/pldm/templates/base.html
@@ -3,7 +3,7 @@
 <head>
     <title>{% block html_title %}{% endblock %}</title>
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Droid+Sans+Mono" />
-    <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.1.1/css/bootstrap.min.css" />
+    <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" />
     <link rel="stylesheet" type="text/css" href="/static/pldm.css" />
 </head>
 <body>
